<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.naver.maps.map.MapView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/register_map_view"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        android:name="com.naver.maps.map.MapFragment" />

    <TextView
        android:layout_width="188dp"
        android:layout_height="30dp"
        android:layout_marginTop="100dp"
        android:background="@color/white"
        android:gravity="center"
        android:text="@string/text_move_map_set_location"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/register_tv_location"
        android:layout_width="0dp"
        android:layout_height="73dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="8dp"
        android:background="@color/white"
        android:gravity="center"
        android:paddingHorizontal="12dp"
        app:layout_constraintBottom_toTopOf="@+id/register_floatingbtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="서울특별시 강남구" />

    <ImageView
        android:id="@+id/register_center_marker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="7dp"
        android:contentDescription="@string/centermarker"
        android:src="@drawable/navermap_default_marker_icon_blue"
        app:layout_constraintBottom_toBottomOf="@id/register_crosshair"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/register_crosshair"
        android:layout_width="14dp"
        android:layout_height="14dp"
        android:src="@drawable/crosshair"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/crosshair" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/register_floatingbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:backgroundTint="#00C42E"
        android:tint="@color/white"
        app:tint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_baseline_check_24"
        android:contentDescription="@string/register" />
</androidx.constraintlayout.widget.ConstraintLayout>